--- a/lib/generators/simple_form/templates/_form.html.haml
+++ b/lib/generators/simple_form/templates/_form.html.haml
@@ -1,12 +1,12 @@
-= simple_form_for(@<%= singular_name %>) do |f|
-  - if @<%= singular_name %>.errors.any?
+= simple_form_for(@<%= singular_table_name %>) do |f|
+  - if @<%= singular_table_name %>.errors.any?
     #error_explanation
       %h2
-        = pluralize(@<%= singular_name %>.errors.count, "error")
-        prohibited this <%= singular_name %> from being saved:
+        = pluralize(@<%= singular_table_name %>.errors.count, "error")
+        prohibited this <%= singular_table_name %> from being saved:
 
       %ul
-        - @<%= singular_name %>.errors.full_messages.each do |msg|
+        - @<%= singular_table_name %>.errors.full_messages.each do |msg|
           %li= msg
 
   .inputs
